# processmining

./: .gitignore  LICENSE  README.md  processmining.cabal  scratch.hs  stack.yaml
src/ProcessMining/Discovery/: Alpha.hs  Footprint.hs
src/ProcessMining/Log/: SimpleLog.hs
src/ProcessMining/Model/: PetriNet.hs
src/ProcessMining/Model/PetriNet/: Graphviz.hs
test/: doctests.hs
test/ProcessMining/Log/: SimpleLogSpec.hs
